--- a/VBWinFormsTut/VBWinFormsTut.vbproj
+++ b/VBWinFormsTut/VBWinFormsTut.vbproj
@@ -15,4 +15,13 @@
     <Import Include="System.Windows.Forms" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Views\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\VbTut.ClassLibrary\VbTut.ClassLibrary.vbproj" />
+  </ItemGroup>
+
 </Project>
