Creating a progress bar

--- a/VBWinFormsTut/VBWinFormsTut.vbproj
+++ b/VBWinFormsTut/VBWinFormsTut.vbproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Root\img\sky.jfif" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Import Include="System.Data" />
     <Import Include="System.Drawing" />
     <Import Include="System.Windows.Forms" />
@@ -22,6 +26,26 @@
 
   <ItemGroup>
     <ProjectReference Include="..\VbTut.ClassLibrary\VbTut.ClassLibrary.vbproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Root\img\sky.jfif" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="My Project\Resources.Designer.vb">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="My Project\Resources.resx">
+      <CustomToolNamespace>My.Resources</CustomToolNamespace>
+      <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.vb</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
